Hack to align share buttons (from https://github.com/holderdeord/hdo-site/pull/661#issuecomment-36030737)

--- a/app/assets/stylesheets/shared_components.css.less
+++ b/app/assets/stylesheets/shared_components.css.less
@@ -184,3 +184,7 @@ section {
 .read-more {
   color: @hdoPrimaryColor;
 }
+
+iframe#twitter-widget-0.twitter-share-button.twitter-tweet-button.twitter-count-horizontal {
+  margin-bottom: -7px;
+}
